# espanso-gui

./: .gitignore  Cargo.toml  LICENSE  README.md  io.unobserved.espansogui.json  meson.build  sample.yml
assets/: meson.build
assets/flatpak/: io.unobserved.espansogui.json
assets/linux/: io.unobserved.espansoGUI.appdata.xml  io.unobserved.espansoGUI.desktop  io.unobserved.espansogui.appdata.xml  io.unobserved.espansogui.desktop
src/: app.rs  before_triggers.rs  egui_data.rs  espanso_yaml.rs  loading_state.rs  main.rs  meson.build  nav_button_style.rs  style.rs  triggers.rs
src/parse_config/: mod.rs  yaml_config.rs
wix/: main.wxs
