[package]
name = "espanso_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
home = "0.5.5"
iced = "0.10"
once_cell = "1.18.0"
rfd = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
