[package]
name = "espanso_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "5.0"
home = "0.5"
iced = "0.10"
iced_aw = { version = "0.7", default-features = false, features = ["modal", "card", "icons"] }
once_cell = "1.18"
regex = "1.9"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2"
