[package]
name = "espanso-gui"
description = "GUI interface for espanso."
authors = ["Ricky Kresslein <ricky@unobserved.io>" ]
license = "GPL-3.0-or-later"
version = "24.7.0"
edition = "2021"

[package.metadata.bundle]
name = "espansoGUI"
identifier = "io.unobserved.espansogui"
icon = [
    "assets/mac_icon_set/espansoGUI-Mac-Icon-16x16.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-32x32.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-64x64.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-128x128.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-128x128@2x.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-256x256.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-256x256@2x.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-512x512.png",
    "assets/mac_icon_set/espansoGUI-Mac-Icon-512x512@2x.png",
]
copyright = "Copyright (c) Ricky Kresslein 2023. All rights reserved."
category = "public.app-category.productivity"
short_description = "GUI interface for espanso."
long_description = """
A Rust/Iced based GUI frontend for the espanso text expander.
"""

[dependencies]
anyhow = "1.0"
dark-light = "1.1"
dirs = "5.0"
home = "0.5"
iced = "0.12"
iced_aw = { version = "0.9.3", default-features = false, features = ["modal", "card", "icons", "number_input", "context_menu"] }
once_cell = "1.19"
regex = "1.10"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2"
webbrowser = "1.0"
